[gd_scene load_steps=2 format=3 uid="uid://b047on3svtnae"]

[ext_resource type="Script" path="res://utilities/pauseMenu/pause_menu.gd" id="1_amycw"]

[node name="PauseMenu" type="Node2D"]
process_mode = 2
z_index = 5
script = ExtResource("1_amycw")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.196078)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -153.0
offset_right = 192.0
offset_bottom = 153.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "-= PAUSE =-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Restart Level"

[node name="quitToMenu" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Quit to Menu"

[node name="quitGame" type="Button" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/quitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/quitGame" to="." method="_on_quit_game_pressed"]
